# lirstings

./: .gitignore  Cargo.toml  update_default_config.py
lirstings/: Cargo.toml
lirstings-cli/: Cargo.toml
lirstings-cli/src/: config.rs  from_tex.rs  language_provider.rs  lib.rs  lirstings.tex  main.rs
lirstings/src/: ansi.rs  cache.rs  lib.rs  log.rs  output.rs  range.rs  renderer.rs  theme.rs  ts.rs
lirstings/src/ts/: highlighter.rs  language_provider.rs
src/: ansi.rs  cache.rs  config.rs  default_config.json  from_tex.rs  lirstings.fdb_latexmk  lirstings.fls  lirstings.lua  lirstings.tex  main.rs  output.rs  range.rs  theme.rs  ts.rs
tree-sitter-wasm-build-tool/: Cargo.toml
tree-sitter-wasm-build-tool/src/: lib.rs
