[package]
name = "lirstings-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "lirstings"

[dependencies]
serde_json = "1.0.87"
clap = { version = "4.0.18", features = ["derive"] }
anyhow = "1.0.66"
serde = { version = "1.0.147", features = ["derive"] }
tree-sitter-loader = { git = "https://github.com/shadaj/tree-sitter-c2rust" }
glob = { version = "0.3.0" }

lirstings = { path = "../lirstings" }
